--- a/client-side/src/styles/common-section.css
+++ b/client-side/src/styles/common-section.css
@@ -1,6 +1,6 @@
 .common__section {
     background: linear-gradient(rgb(0, 13, 107, 0.6), rgb(0, 13, 107, 0.6)),
-      url("../assets/images/drive.jpg");
+      url("../assets/images/slider-img/car-img2.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
