--- a/client-side/src/styles/contact.css
+++ b/client-side/src/styles/contact.css
@@ -1,27 +1,37 @@
 .social__link-icon {
     text-decoration: none;
-  
     color: #000d6b;
     font-weight: 500;
     font-size: 1.2rem;
-  }
-  
-  .contact__btn {
+}
+
+.contact__btn {
     padding: 7px 15px;
-    background: #000d6b;
+    background: #000d6b !important;
     color: #fff;
     border: none;
-    outline: none;
+    outline: none !important;
     border-radius: 5px;
-  }
-  
-  .textarea__contact{
+}
+
+.textarea__contact {
     width: 100%;
-  }
-  @media only screen and (max-width: 768px) {
+}
+
+input, textarea {
+    background: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 0px 2px rgba(31, 38, 135, 0.089);
+    backdrop-filter: blur(8.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    color: #fff;
+    /* padding: 10px; */
+    width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
     .contact__btn {
-      margin-bottom: 40px;
-      font-size: 0.8rem;
+        margin-bottom: 40px;
+        font-size: 0.8rem;
     }
-  }
-  
+}
